changed routing to follow REST architecture
