# api/api-spec.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Gotalk API
   description: A general API endpoint to handle comments even on static sites
-  version: 1.0.0
+  version: 0.0.1
 servers:
   - url: /v1
 paths:
@@ -13,45 +13,52 @@ paths:
         '200':
           description: pong
 
-  /register:
+  /user/new:
     post:
       summary: Register a new user
-      parameters:
-        - name: name
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: email
-          in: query
-          required: true
-          schema:
-            type: string
-            format: email
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                email:
+                  type: string
+                  format: email
+              required:
+                - name
+                - email
       responses:
         '201':
-          description: Registration complete" 
+          description: Registration complete
         '400':
           description: Bad request
         '409':
-          description: Email already exists 
+          description: Email already exists
 
-  /user/comment/new:
+  /users/{userid}/comments:
     post:
       summary: Post a comment
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                threadid:
+                  type: string
+                content:
+                  type: string
+              required:
+                - threadid
+                - content
       parameters:
         - name: userid
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: threadid
-          in: query
-          required: true
-          schema:
-            type: string
-        - name: content
-          in: query
+          in: path
           required: true
           schema:
             type: string
@@ -63,12 +70,12 @@ paths:
         '400':
           description: Bad request
 
-  /admin/comment/delete:
-    post:
+  /auth/comments/{commentid}:
+    delete:
       summary: Delete a comment
       parameters:
-        - name: id
-          in: query
+        - name: commentid
+          in: path
           required: true
           schema:
             type: string
@@ -87,12 +94,12 @@ paths:
         '400':
           description: Bad request
 
-  /admin/sudo:
+  /admin/users/{userid}/sudo:
     post:
       summary: Grant admin privileges to a user
       parameters:
-        - name: id
-          in: query
+        - name: userid
+          in: path
           required: true
           schema:
             type: string
@@ -104,14 +111,14 @@ paths:
         '404':
           description: User not found
         '500':
-          description: Failed to sudo
+          description: Failed to grant admin privileges
 
-  /admin/sudo/undo:
+  /admin/users/{userid}/sudo/revoke:
     post:
       summary: Revoke admin privileges from a user
       parameters:
-        - name: id
-          in: query
+        - name: userid
+          in: path
           required: true
           schema:
             type: string
@@ -125,21 +132,48 @@ paths:
         '500':
           description: Failed to revoke admin privileges
 
-  /admin/thread/new:
+  /threads:
+    get:
+      summary: Retrieve all thread ids 
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+      responses:
+        '200':
+          description: Threads retrieved successfully 
+        '401':
+          description: Unauthorized
+
+  /threads/new:
     post:
       summary: Create a new thread
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
       responses:
         '201':
           description: Thread created successfully
         '401':
           description: Unauthorized
 
-  /admin/thread/delete:
+  /threads/{threadid}:
     delete:
       summary: Delete a thread
       parameters:
         - name: threadid
-          in: query
+          in: path
           required: true
           schema:
             type: string
@@ -147,7 +181,7 @@ paths:
         '204':
           description: Thread deleted successfully
         '400':
-          description: Unable to parse form
+          description: Unable to parse request
         '401':
           description: Unauthorized
         '404':
